--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.7.0"
   }
 }
